# predikcs

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: goals.yaml
include/predikcs/: config_sample.h  goal_classifier_user_model.h  motion_state.h  reward_calculator.h  robot_model.h  user_model.h  voo_bandit.h
launch/: fetch_controller_goal.launch  fetch_controller_line.launch  fetch_controller_line.py  fetch_controller_min_vel_baseline.launch  fetch_controller_no_predict.launch
scripts/: data_recorder.py  recorder.py  reset.py
src/: config_sample.cpp  controller.cpp  goal_classifier_user_model.cpp  reward_calculator.cpp  robot_model.cpp  user_model.cpp  voo_bandit.cpp
